# One-Class-NeuralNetwork

./: .gitignore  .project  Driver.py  LICENSE  OC_NN.py  OneClassNN.py  Pipfile  README.md  driver.py  kdd_cup.py  loss.py  ocnn.py  pyproject.toml  wine.py
Loss/: OneClassLoss.py  __init__.py
models/: ocnn_2020-05-10-08:24.h5  ocnn_2020-05-10-08:27.h5  ocnn_2020-05-10-08:29.h5  ocnn_2020-05-10-08:41.h5  ocnn_2020-05-10-08:43.h5  ocnn_2020-05-10-08:55.h5
models/ocnn_2020-05-10-20:45/: layers.npz  model.h5
models/ocnn_2020-05-10-20:51/: layers.npz  model.h5
models/ocnn_2020-05-17-18:03/: layers.npz  model.h5
models/ocnn_2020-05-17-18:06/: layers.npz  model.h5
models/ocnn_2020-05-17-18:10/: layers.npz  model.h5
models/ocnn_2020-05-17-18:16/: model.h5  params.npz
models/ocnn_2020-05-17-18:17/: model.h5  params.npz
models/ocnn_2020-05-17-18:18/: model.h5  params.npz
models/ocnn_2020-05-17-18:20/: model.h5  params.npz
models/ocnn_2020-05-17-20:01/: model.h5  params.npz
models/ocnn_2020-05-17-20:02/: model.h5  params.npz
models/ocnn_2020-05-17-20:12/: model.h5  params.npz
models/ocnn_2020-05-17-20:20/: model.h5  params.npz
models/ocnn_2020-05-17-20:29/: model.h5  params.npz
models/ocnn_2020-05-17-20:30/: model.h5  params.npz
models/ocnn_2020-05-17-20:31/: model.h5  params.npz
models/ocnn_2020-05-17-20:35/: model.h5  params.npz
models/ocnn_2020-05-17-20:36/: model.h5  params.npz
models/ocnn_2020-05-17-20:37/: model.h5  params.npz
models/ocnn_2020-05-17-20:38/: model.h5  params.npz
test/: test_basic.py  test_loss_function.py
(+146 files in other folders)
