[project]
name = "one-class-neural-network"
version = "0.1.0"
description = ""
authors = [
  { name = "Daniel Cahall", email = "danielenricocahall@gmail.com" }
]
requires-python = ">=3.9,<3.12"
dependencies = [
  "tensorflow",
  "tensorflow-probability==0.23.0",
  "matplotlib",
  "keras<3.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]


